--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -19,7 +19,7 @@
     <div class="row border-bottom border-info">
       {% for book in books %}
         <div class="col-lg-6 text-center my-3">
-          <img src="{{ book.image.url }}" alt="no photo" class="rounded" />
+          <img src="{{ book.image.url }}" alt="no photo" class="rounded img-fluid" />
           <h4 class="mt-3">{{ book.title }}</h4>
           {% if request.resolver_match.url_name == 'author_books' %}
             <h5>{{ book.author }}</h5>
