--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -4,7 +4,7 @@
     <div>
       <h2>Explore The Library</h2>
       <h1>A BOOK FOR YOU</h1>
-      <a class="btn btn-outline-info m-3" href="{% url 'books_library' %}">Library</a>
+      <a class="btn btn-primary m-3" href="{% url 'books_library' %}">Library</a>
     </div>
   </section>
 </div>
