--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -45,6 +45,9 @@
               <a href="{% url 'website_home' %}" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
+              <a href="{% url 'recommended_books' %}" class="nav-link">Recommended</a>
+            </li>
+            <li class="nav-item">
               <a href="{% url 'website_about' %}" class="nav-link">About</a>
             </li>
           </ul>
