--- a/books/templates/books/recommended_book_list.html
+++ b/books/templates/books/recommended_book_list.html
@@ -7,13 +7,10 @@
     <div class="row border-bottom border-info">
       {% for book in books %}
         <div class="col-lg-6 text-center my-3">
+          <h3 class="text-success"> Likes: {{book.likes.all.count}}</h3>
           <img src="{{ book.image.url }}" alt="no photo" class="rounded img-fluid" />
           <h4 class="mt-3">{{ book.title }}</h4>
-          {% if request.resolver_match.url_name == 'author_books' %}
-            <h5>{{ book.author }}</h5>
-          {% else %}
-            <h5><a href="{% url 'author_books' book.author %}">{{ book.author }}</a></h5>
-          {% endif%}
+          <h5><a href="{% url 'author_books' book.author %}">{{ book.author }}</a></h5>
           <a
             href="{% url 'books_details' pk=book.pk slug=book.slug %}"
             class="btn btn-outline-info mt-1 mb-2"
