--- a/books/templates/books/recommended_book_list.html
+++ b/books/templates/books/recommended_book_list.html
@@ -3,11 +3,11 @@
 {% block content %}
 <div class="container">
   {% if books %}
-  <h1 class="title text-center mb-4 mt-4 border-bottom border-info-outline">TOP 3 MOST LIKED BOOKS </h1>
+  <h1 class="title text-center mb-4 mt-4 border-bottom border-info-outline">MOST LIKED BOOKS </h1>
     <div class="row border-bottom border-info">
       {% for book in books %}
-        <div class="col-lg-6 text-center my-3">
-          <h3 class="text-success"> Likes: {{book.likes.all.count}}</h3>
+        <div class="col-lg-4 text-center my-3">
+          <h3 class="text-primary"> <i class="bi bi-hand-thumbs-up-fill"></i> {{book.likes.all.count}}</h3>
           <img src="{{ book.image.url }}" alt="no photo" class="rounded img-fluid" />
           <h4 class="mt-3">{{ book.title }}</h4>
           <h5><a href="{% url 'author_books' book.author %}">{{ book.author }}</a></h5>
@@ -20,11 +20,10 @@
       {% endfor %}
     </div>
   {% else %}
-        <h1>No  Liked Books yet !</h1>
+        <h1>No Liked Books yet !</h1>
         <a href="{% url 'books_library' %}" class="btn btn-outline-info mt-5"
             >Library</a>
       </div>
   {% endif %}
-
 </div>
 {% endblock content%}
