--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -44,9 +44,11 @@
             <li class="nav-item">
               <a href="{% url 'website_home' %}" class="nav-link">Home</a>
             </li>
+            {% if user.is_authenticated %}
             <li class="nav-item">
               <a href="{% url 'recommended_books' %}" class="nav-link">Recommended</a>
             </li>
+            {% endif %}
             <li class="nav-item">
               <a href="{% url 'website_about' %}" class="nav-link">About</a>
             </li>
