--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load genres_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -51,6 +52,14 @@
             {% endif %}
             <li class="nav-item">
               <a href="{% url 'website_about' %}" class="nav-link">About</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Genres
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                {% all_genres %}
+              </div>
             </li>
           </ul>
           <ul class="navbar-nav ms-auto">
