--- a/website/templates/website/tags/genre_list.html
+++ b/website/templates/website/tags/genre_list.html
@@ -1,3 +1,3 @@
 {% for genre in genres %}
-    <a class="dropdown-item" href="#">{{ genre }}</a>
+    <a class="dropdown-item" href="{% url 'genre_books' genre.0 %}">{{ genre.1 }}</a>
 {% endfor %}
