--- a/users/templates/users/favourites.html
+++ b/users/templates/users/favourites.html
@@ -4,7 +4,7 @@
 <div class="container">
   <div>  
     <h1 class="title text-center mb-4 mt-4 border-bottom border-info-outline">
-      Favourites ({{ page_obj.paginator.count }})
+      Saved Books ({{ page_obj.paginator.count }})
     </h1>
   </div>
   <div class="row">
