--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -1,96 +1,102 @@
-{% extends "website/base.html" %} {% block content%}
-<div class="container">
-  <div class="row align-items-center mt-5">
-    <div class="col-lg-6 text-center">
-      <img src="{{ object.image.url }}" alt="no img" class="rounded img-fluid" />
-      <div class="mt-3">
-        <p style="margin-right:20px;" class="text-primary"><i class="bi bi-hand-thumbs-up-fill"></i> {{ number_of_likes }}</p>
-      </div>
-      {% if object.posted_by == user or user.is_superuser %}
-        <div>
-          {% if object.posted_by != user and user.is_superuser %}
-            <a 
-            href="{% url 'profile_add_favourite' pk=object.pk %}" 
-            class="btn btn-outline-primary bi bi-bookmark-heart-fill">
-              {% if has_user_saved_book %}
-                Saved
+{% extends "website/base.html" %}
+{% load static %}
+
+{% block content%}
+  <div class="container">
+    <div class="row align-items-center mt-5">
+      <div class="col-lg-6 text-center">
+        <img src="{{ object.image.url }}" alt="no img" class="rounded img-fluid" />
+        <div class="mt-3">
+          <p style="margin-right:20px;" class="text-primary"><i class="bi bi-hand-thumbs-up-fill"></i> {{ number_of_likes }}</p>
+        </div>
+        {% if object.posted_by == user or user.is_superuser %}
+          <div>
+            {% if object.posted_by != user and user.is_superuser %}
+              <a 
+              href="{% url 'profile_add_favourite' pk=object.pk %}" 
+              class="btn btn-outline-primary bi bi-bookmark-heart-fill">
+                {% if has_user_saved_book %}
+                  Saved
+                {% else %}
+                  Save
+                {% endif %}
+              </a>
+              {% if has_user_liked_book %}
+              <a 
+                href="{% url 'profile_like_book' pk=object.pk %}" 
+                class="btn btn-outline-primary mx-4 bi bi-hand-thumbs-up-fill">  
+                  Liked
+              </a>
               {% else %}
-                Save
-              {% endif %}
+              <a 
+                  href="{% url 'profile_like_book' pk=object.pk %}" 
+                  class="btn btn-outline-primary mx-4 bi bi-hand-thumbs-up">      
+                    Like
+              </a>
+              {% endif %}       
+            {% endif %}
+            <a
+              class="btn btn-primary me-4"
+              href="{% url 'books_update' pk=object.pk slug=object.slug %}"
+              >Update</a
+              >
+            <a class="btn btn-danger" href="{% url 'books_delete' pk=object.id slug=object.slug %}"
+              >Delete</a
+              >
+          </div>   
+        {% elif user.is_authenticated %}
+          <div>
+            <a 
+              href="{% url 'profile_add_favourite' pk=object.pk %}" 
+              class="btn btn-outline-primary bi bi-bookmark-heart-fill">
+                {% if has_user_saved_book %}
+                  Saved
+                {% else %}
+                  Save
+                {% endif %}
             </a>
             {% if has_user_liked_book %}
-            <a 
+              <a 
               href="{% url 'profile_like_book' pk=object.pk %}" 
-              class="btn btn-outline-primary mx-4 bi bi-hand-thumbs-up-fill">  
-                Liked
-            </a>
+              class="btn btn-outline-primary mx-4 bi bi-hand-thumbs-up-fill">
+                  Liked
+              </a>
             {% else %}
-            <a 
+              <a 
                 href="{% url 'profile_like_book' pk=object.pk %}" 
-                class="btn btn-outline-primary mx-4 bi bi-hand-thumbs-up">      
+                class="btn btn-outline-primary mx-4 bi bi-hand-thumbs-up">
                   Like
-            </a>
-            {% endif %}       
-          {% endif %}
-          <a
-            class="btn btn-primary me-4"
-            href="{% url 'books_update' pk=object.pk slug=object.slug %}"
-            >Update</a
-            >
-          <a class="btn btn-danger" href="{% url 'books_delete' pk=object.id slug=object.slug %}"
-            >Delete</a
-            >
-        </div>   
-      {% elif user.is_authenticated %}
-        <div>
-          <a 
-            href="{% url 'profile_add_favourite' pk=object.pk %}" 
-            class="btn btn-outline-primary bi bi-bookmark-heart-fill">
-              {% if has_user_saved_book %}
-                Saved
-              {% else %}
-                Save
-              {% endif %}
-          </a>
-          {% if has_user_liked_book %}
-            <a 
-            href="{% url 'profile_like_book' pk=object.pk %}" 
-            class="btn btn-outline-primary mx-4 bi bi-hand-thumbs-up-fill">
-                Liked
-            </a>
-          {% else %}
-            <a 
-              href="{% url 'profile_like_book' pk=object.pk %}" 
-              class="btn btn-outline-primary mx-4 bi bi-hand-thumbs-up">
-                Like
-            </a>
-          {% endif %}
-        </div>
-      {% endif %}
-    
-    </div>
-    <div class="col-lg-6 text-right mt-5 px-3">
-      <div style="border-left: 2px solid #0DCAF0" class="px-3">     
-        <h1>{{object.title}}</h1>
-        <h2><a href="{% url 'author_books' object.author %}">{{ object.author }}</a></h2>
-        <h4>Language - {{ object.language }}</h4>
-        <h4>Genre - {{ object.get_genre_display }}</h4>
-        <blockquote class="blockquote">
-          <p class="mb-0">{{object.description}}</p>
-          <div class="mt-5">
-            <footer class="blockquote-footer">
-              Shared by
-              {% if user == object.posted_by%}
-                <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
-                <a href="{% url 'my_books' %}">me</a> on {{ object.date_posted|date:'l d-m-y, P' }}
-              {% else %}
-                <a href="{% url 'profile_books' object.posted_by %}">{{ object.posted_by }}</a> on {{ object.date_posted|date:'l d-m-y, P' }}
-              {% endif %}
-             </footer>
+              </a>
+            {% endif %}
           </div>
-        </blockquote>
+        {% endif %}
+      
+      </div>
+      <div class="col-lg-6 text-right mt-5 px-3">
+        <div style="border-left: 2px solid #0DCAF0" class="px-3">     
+          <h1>{{object.title}}</h1>
+          <h2><a href="{% url 'author_books' object.author %}">{{ object.author }}</a></h2>
+          <h4>Language - {{ object.language }}</h4>
+          <h4>Genre - {{ object.get_genre_display }}</h4>
+          <blockquote class="blockquote">
+            <p class="mb-0">{{object.description}}</p>
+            <div class="mt-5">
+              <footer class="blockquote-footer">
+                Shared by
+                {% if user == object.posted_by%}
+                  <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
+                  <a href="{% url 'my_books' %}">me</a> on {{ object.date_posted|date:'l d-m-y, P' }}
+                {% else %}
+                  <a href="{% url 'profile_books' object.posted_by %}">{{ object.posted_by }}</a> on {{ object.date_posted|date:'l d-m-y, P' }}
+                {% endif %}
+              </footer>
+            </div>
+          </blockquote>
+        </div>
       </div>
     </div>
   </div>
-</div>
 {% endblock content %}
+{% block script %}
+  <script src="{% static 'app.js' %}"></script>
+{% endblock %}
