--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -143,5 +143,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <!-- loaded in books_details for like and save functionalities -->
+    {% block script %} {% endblock %}
   </body>
 </html>
