include tag buttons

--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -8,68 +8,7 @@
         <div class="mt-3">
           <p style="margin-right:20px;" class="text-primary"><i class="bi bi-hand-thumbs-up-fill"></i> {{ number_of_likes }}</p>
         </div>
-        {% if object.posted_by == user or user.is_superuser %}
-          <div>
-            {% if object.posted_by != user and user.is_superuser %}
-              <a 
-              href="{% url 'profile_add_favourite' pk=object.pk %}" 
-              class="btn btn-outline-primary bi bi-bookmark-heart-fill">
-                {% if has_user_saved_book %}
-                  Saved
-                {% else %}
-                  Save
-                {% endif %}
-              </a>
-              {% if has_user_liked_book %}
-              <a 
-                href="{% url 'profile_like_book' pk=object.pk %}" 
-                class="btn btn-outline-primary mx-4 bi bi-hand-thumbs-up-fill">  
-                  Liked
-              </a>
-              {% else %}
-              <a 
-                  href="{% url 'profile_like_book' pk=object.pk %}" 
-                  class="btn btn-outline-primary mx-4 bi bi-hand-thumbs-up">      
-                    Like
-              </a>
-              {% endif %}       
-            {% endif %}
-            <a
-              class="btn btn-primary me-4"
-              href="{% url 'books_update' pk=object.pk slug=object.slug %}"
-              >Update</a
-              >
-            <a class="btn btn-danger" href="{% url 'books_delete' pk=object.id slug=object.slug %}"
-              >Delete</a
-              >
-          </div>   
-        {% elif user.is_authenticated %}
-          <div>
-            <a 
-              href="{% url 'profile_add_favourite' pk=object.pk %}" 
-              class="btn btn-outline-primary bi bi-bookmark-heart-fill">
-                {% if has_user_saved_book %}
-                  Saved
-                {% else %}
-                  Save
-                {% endif %}
-            </a>
-            {% if has_user_liked_book %}
-              <a 
-              href="{% url 'profile_like_book' pk=object.pk %}" 
-              class="btn btn-outline-primary mx-4 bi bi-hand-thumbs-up-fill">
-                  Liked
-              </a>
-            {% else %}
-              <a 
-                href="{% url 'profile_like_book' pk=object.pk %}" 
-                class="btn btn-outline-primary mx-4 bi bi-hand-thumbs-up">
-                  Like
-              </a>
-            {% endif %}
-          </div>
-        {% endif %}
-      
+        {% include 'books/buttons.html'%}
       </div>
       <div class="col-lg-6 text-right mt-5 px-3">
         <div style="border-left: 2px solid #0DCAF0" class="px-3">     
