--- a/books/templates/books/buttons.html
+++ b/books/templates/books/buttons.html
@@ -1,29 +1,7 @@
 {% if object.posted_by == user or user.is_superuser %}
 <div>
   {% if object.posted_by != user and user.is_superuser %}
-    <a 
-    
-    href="{% url 'profile_add_favourite' pk=object.pk %}" 
-    class="btn btn-outline-primary bi bi-bookmark-heart-fill">
-      {% if has_user_saved_book %}
-        Saved
-      {% else %}
-        Save
-      {% endif %}
-    </a>
-    {% if has_user_liked_book %}
-    <a 
-      href="{% url 'profile_like_book' pk=object.pk %}" 
-      class="btn btn-outline-primary mx-4 bi bi-hand-thumbs-up-fill">  
-        Liked
-    </a>
-    {% else %}
-    <a 
-        href="{% url 'profile_like_book' pk=object.pk %}" 
-        class="btn btn-outline-primary mx-4 bi bi-hand-thumbs-up">      
-          Like
-    </a>
-    {% endif %}       
+    {% include 'books/save_like_anchors.html'%} 
   {% endif %}
   <a
     class="btn btn-primary me-4"
@@ -36,27 +14,6 @@
 </div>   
 {% elif user.is_authenticated %}
 <div>
-  <a 
-    href="{% url 'profile_add_favourite' pk=object.pk %}" 
-    class="btn btn-outline-primary bi bi-bookmark-heart-fill">
-      {% if has_user_saved_book %}
-        Saved
-      {% else %}
-        Save
-      {% endif %}
-  </a>
-  {% if has_user_liked_book %}
-    <a 
-    href="{% url 'profile_like_book' pk=object.pk %}" 
-    class="btn btn-outline-primary mx-4 bi bi-hand-thumbs-up-fill">
-        Liked
-    </a>
-  {% else %}
-    <a 
-      href="{% url 'profile_like_book' pk=object.pk %}" 
-      class="btn btn-outline-primary mx-4 bi bi-hand-thumbs-up">
-        Like
-    </a>
-  {% endif %}
+  {% include 'books/save_like_anchors.html'%}
 </div>
 {% endif %}
