--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -33,5 +33,8 @@
         </div>
       </div>
     </div>
+    <div class="row">
+      {% include 'books/comments.html'%}
+    </div>
   </div>
 {% endblock content %}
