--- a/books/templates/books/comments.html
+++ b/books/templates/books/comments.html
@@ -1,7 +1,26 @@
-{% if comments %}
+{% load crispy_forms_tags %}
+
+<div class="row">
+  <div>
+    {% if comments %}
     <ul>
-        {% for comment in comments %}
-            <li> {{ comment }}</li>
-        {% endfor %}
+      {% for comment in comments %}
+      <li>{{ comment }}</li>
+      {% endfor %}
     </ul>
-{% endif %}
+    {% endif %}
+  </div>
+
+  <div>
+    <form method="POST">
+      {% csrf_token %}
+      <fieldset class="form-group">
+        <legend class="border-bottom mb-4">Comment Below</legend>
+        {{ form|crispy }}
+      </fieldset>
+      <div class="form-group">
+        <button class="btn btn-outline-info mt-3" type="submit">Submit</button>
+      </div>
+    </form>
+  </div>
+</div>
