when there is no comments

--- a/books/templates/books/comments.html
+++ b/books/templates/books/comments.html
@@ -17,6 +17,8 @@
       </li>
       {% endfor %}
     </ul>
+    {% else %}
+      <p>Be the first person to comment !</p>
     {% endif %}
   </div>
 
