--- a/books/templates/books/buttons.html
+++ b/books/templates/books/buttons.html
@@ -5,7 +5,7 @@
     {% if object.posted_by == user or user.is_superuser %}
     
       <a
-        class="btn btn-primary me-4"
+        class="btn btn-primary mx-4"
         href="{% url 'books_update' pk=object.pk slug=object.slug %}"
         >Update</a
         >   
