--- a/books/templates/books/save_like_anchors.html
+++ b/books/templates/books/save_like_anchors.html
@@ -1,20 +1,26 @@
-<a
+{% if has_user_saved_book %}
+    <a
+    href="{% url 'profile_save_book' pk=object.pk %}"
+    class="btn btn-outline-primary bi bi-bookmark-heart-fill"
+  > Saved</a>
+{% else %}
+  <a
   href="{% url 'profile_save_book' pk=object.pk %}"
-  class="btn btn-outline-primary bi bi-bookmark-heart-fill"
->
-  {% if has_user_saved_book %} Saved {% else %} Save {% endif %}
-</a>
+  class="btn btn-outline-primary bi bi-bookmark-heart"
+  > Save</a>
+{% endif %}
+
 {% if has_user_liked_book %}
 <a
   href="{% url 'profile_like_book' pk=object.pk %}"
-  class="btn btn-outline-primary mx-4 bi bi-hand-thumbs-up-fill"
+  class="btn btn-outline-primary ms-4 bi bi-hand-thumbs-up-fill"
 >
   Liked
 </a>
 {% else %}
 <a
   href="{% url 'profile_like_book' pk=object.pk %}"
-  class="btn btn-outline-primary mx-4 bi bi-hand-thumbs-up"
+  class="btn btn-outline-primary ms-4 bi bi-hand-thumbs-up"
 >
   Like
 </a>
