--- a/books/templates/books/book_form.html
+++ b/books/templates/books/book_form.html
@@ -10,7 +10,13 @@
             <form method="POST" enctype="multipart/form-data">
               {% csrf_token %}
               <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Share A Book</legend>
+                <legend class="border-bottom mb-4">
+                  {% if request.resolver_match.url_name == 'books_create' %}
+                    Share
+                  {% else %}
+                    Update
+                  {% endif %}
+                  Book</legend>
                 {{ form|crispy }}
               </fieldset>
               <div class="form-group">
