--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -21,9 +21,9 @@
                 Shared by
                 {% if user == object.posted_by%}
                   <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
-                  <a href="{% url 'profile' %}">me</a> on {{ object.date_posted|date:'l d-m-y, P' }}
+                  <a href="{% url 'profile' %}">me</a> on {{ object.date_posted|date:'d F, Y' }}
                 {% else %}
-                  <a href="{% url 'profile_user' object.posted_by.id %}">{{ object.posted_by }}</a> on {{ object.date_posted|date:'l d-m-y, P' }}
+                  <a href="{% url 'profile_user' object.posted_by.id %}">{{ object.posted_by }}</a> on {{ object.date_posted|date:'d F, Y' }}
                 {% endif %}
               </footer>
             </div>
