--- a/books/templates/books/comments.html
+++ b/books/templates/books/comments.html
@@ -1,36 +1,38 @@
 {% load crispy_forms_tags %}
 {% if user.is_authenticated %}
   <div class="row">
-    <div>
+    <div class="col-lg-6">
+      <h1 class="mt-4">Comments</h1>
       {% if comments %}
-      <ul>
         {% for comment in comments %}
-        <li>
-            Posted by:
-              {% if user == comment.posted_by %}
-                <a href="{% url 'profile' %}">me</a>
-              {% else %}
-                <a href="{% url 'profile_user' object.posted_by.id %}">{{ comment.posted_by }}</a>
-              {% endif %}
-          Comment: {{ comment.content }}
-          Date: {{ comment.date_posted}}
-        </li>
+        <div class="comment mt-4 text-justify border mt-2"> 
+          <img src="{{ comment.posted_by.profile.image.url }}" alt="" class="rounded-circle comment-pic m-2">
+          <h4 style="display: inline-block;">
+            {% if user == comment.posted_by %}
+              <a href="{% url 'profile' %}">me</a>
+            {% else %}
+              <a href="{% url 'profile_user' object.posted_by.id %}">{{ comment.posted_by }}</a>
+            {% endif %}
+          </h4>
+          <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
+          <span class="text-secondary">- {{ comment.date_posted|date:'d F, Y' }}</span>
+          <br>
+          <p class="m-3">{{ comment.content }}</p>
+        </div>
         {% endfor %}
-      </ul>
       {% else %}
         <p>Be the first person to comment !</p>
       {% endif %}
     </div>
-
-    <div>
+    <div class="col-lg-6 ps-3">
       <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-          <legend class="border-bottom mb-4">Comment Below</legend>
+          <legend class="border-bottom mb-4">Leave a comment</legend>
           {{ form|crispy }}
         </fieldset>
         <div class="form-group">
-          <button class="btn btn-outline-info mt-3" type="submit">Submit</button>
+          <button class="btn btn-outline-info mt-3" type="submit">Comment</button>
         </div>
       </form>
     </div>
