--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -108,11 +108,20 @@
         </div>
       </div>
     </nav>
-
-    {% if messages %} {% for message in messages %}
-    <!-- message.tags -> success, warning, error matches bootstrap alerts -->
-    <div class="alert alert-{{ message.tags }}">{{ message }}</div>
-    {% endfor %} {% endif %} {% block content %}{% endblock %}
+    {% if messages %}
+      <div class="row d-flex justify-content-center text-center">
+        {% for message in messages %}
+          {% if message.tags == 'error' %}
+            <div class="mb-0 mt-4 ms-3 col-lg-2 alert alert-danger">{{ message }}</div>
+          {% else %}
+            <!-- message.tags -> success, warning, error matches bootstrap alerts -->
+            <div class="mt-4 ms-3 col-lg-2 alert alert-{{ message.tags }} text-center align-items-center">{{ message }}</div>
+          {% endif %}
+        {% endfor %}
+      </div>
+    {% endif %}
+    
+    {% block content %}{% endblock %}
 
       <!-- PAGINATION -->
     {% if is_paginated %}
