--- a/books/templates/books/comments.html
+++ b/books/templates/books/comments.html
@@ -4,8 +4,9 @@
     <div class="col-lg-6">
       <h1 class="mt-4">Comments</h1>
       {% if comments %}
+      <div class="gfg">
         {% for comment in comments %}
-        <div class="comment mt-4 text-justify border mt-2 p-2"> 
+        <div class="comment mb-4 text-justify border mt-2 p-2"> 
           <img src="{{ comment.posted_by.profile.image.url }}" alt="" class="rounded-circle comment-pic m-2">
           <h4 style="display: inline-block;">
             {% if user == comment.posted_by %}
@@ -19,7 +20,8 @@
           <br>
           <p class="m-3">{{ comment.content }}</p>
         </div>
-        {% endfor %}
+        {% endfor %}  
+      </div>
       {% else %}
         <p>Be the first person to comment !</p>
       {% endif %}
