--- a/static_files/main.css
+++ b/static_files/main.css
@@ -91,3 +91,11 @@ a {
 fieldset label {
   margin-top: 4px;
 }
+
+div.gfg {
+  padding-right: 20px;
+  height: 500px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  text-align:justify;
+}
