--- a/static_files/main.css
+++ b/static_files/main.css
@@ -92,7 +92,7 @@ fieldset label {
   margin-top: 4px;
 }
 
-div.gfg {
+div.scroll {
   padding-right: 20px;
   height: 500px;
   overflow-x: hidden;
