--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -109,7 +109,7 @@
       </div>
     </nav>
     {% if messages %}
-      <div class="row d-flex justify-content-center text-center">
+      <div class="d-flex justify-content-center text-center">
         {% for message in messages %}
           {% if message.tags == 'error' %}
             <div class="mb-0 mt-4 ms-3 col-lg-2 alert alert-danger">{{ message }}</div>
