fix pagination refresh the ordering, othder class that inherits BookListView, doesn't inhreit get_queryset

--- a/static_files/main.css
+++ b/static_files/main.css
@@ -59,6 +59,10 @@ img.account-img {
   display: none;
 }
 
+#div_id_order_by .asteriskField {
+  display: none;
+}
+
 select {
   -webkit-appearance: listbox !important;
 }
