--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -124,24 +124,28 @@
     {% block content %}{% endblock %}
 
       <!-- PAGINATION -->
+      <!-- 
+        https://stackoverflow.com/questions/32513756/validate-django-form-get-request 
+        - PAGINATION WITH PARAM - check "The pagination template include:" part
+       -->
     {% if is_paginated %}
       <div class="text-center">
         {% if page_obj.has_previous %}
-          <a class="btn btn-outline-info my-4" href="?page=1">First</a>
-          <a class="btn btn-outline-info my-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+          <a class="btn btn-outline-info my-4" href="?{% if view.order_by %}order_by={{ view.order_by }}&amp;{% endif %}page=1">First</a>
+          <a class="btn btn-outline-info my-4" href="?{% if view.order_by %}order_by={{ view.order_by }}&amp;{% endif %}page={{ page_obj.previous_page_number }}">Previous</a>
         {% endif %}
 
         {% for page_num in page_obj.paginator.page_range %}
           {% if page_obj.number == page_num %}
-          <a class="btn btn-info my-4" href="?page={{ page_num }}">{{ page_num }}</a>
+          <a class="btn btn-info my-4" href="?{% if view.order_by %}order_by={{ view.order_by }}&amp;{% endif %}page={{ page_num }}">{{ page_num }}</a>
           {% elif page_num > page_obj.number|add:'-3' and page_num < page_obj.number|add:'3' %}
-            <a class="btn btn-outline-info my-4" href="?page={{ page_num }}">{{ page_num }}</a>
+            <a class="btn btn-outline-info my-4" href="?{% if view.order_by %}order_by={{ view.order_by }}&amp;{% endif %}page={{ page_num }}">{{ page_num }}</a>
           {% endif %} 
         {% endfor %}
 
         {% if page_obj.has_next %}
-          <a class="btn btn-outline-info my-4" href="?page={{ page_obj.next_page_number}}">Next</a>
-          <a class="btn btn-outline-info my-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+          <a class="btn btn-outline-info my-4" href="?{% if view.order_by %}order_by={{ view.order_by }}&amp;{% endif %}page={{ page_obj.next_page_number}}">Next</a>
+          <a class="btn btn-outline-info my-4" href="?{% if view.order_by %}order_by={{ view.order_by }}&amp;{% endif %}page={{ page_obj.paginator.num_pages }}">Last</a>
         {% endif %}
       </div>
     {% endif %}
