--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -2,7 +2,7 @@
 {% load static %} 
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="container">
+<div class="container background-color-purple">
     <form class="input-group d-flex flex-row-reverse bd-highlight">
       <button class="btn btn-outline-info mt-4 ms-2 btn-sm input-group-addon" type="submit">Sort</button>
       <!-- https://stackoverflow.com/questions/15050571/django-csrf-token-in-search-result-url -->
@@ -29,19 +29,23 @@
   {% if books %}
     <div class="row border-bottom border-info">
       {% for book in books %}
-        <div class="col-lg-6 text-center my-3">
-          <img src="{{ book.image.url }}" alt="no photo" class="rounded img-fluid" />
-          <h4 class="mt-3">{{ book.title }}</h4>
-          {% if request.resolver_match.url_name == 'author_books' %}
-            <h5>{{ book.author }}</h5>
-          {% else %}
-            <h5><a href="{% url 'author_books' book.author %}">{{ book.author }}</a></h5>
-          {% endif%}
-          <a
-            href="{% url 'books_details' pk=book.pk slug=book.slug %}"
-            class="btn btn-outline-info mt-1 mb-2"
-            >Learn More</a
-          >
+        <div class="col-lg-6 text-center my-3 d-flex justify-content-center">
+          <div class="book-div">
+            <img src="{{ book.image.url }}" alt="no photo" class="rounded img-fluid" />
+           <div class="info-div">
+            <h4 class="mt-3">{{ book.title }}</h4>
+            {% if request.resolver_match.url_name == 'author_books' %}
+              <h5>{{ book.author }}</h5>
+            {% else %}
+              <h5><a href="{% url 'author_books' book.author %}">{{ book.author }}</a></h5>
+            {% endif%}
+            <a
+              href="{% url 'books_details' pk=book.pk slug=book.slug %}"
+              class="btn btn-primary mt-1 mb-2"
+              >Learn More</a
+            >
+           </div>
+          </div>
         </div>
       {% endfor %}
     </div>
