--- a/books/templates/books/recommended_book_list.html
+++ b/books/templates/books/recommended_book_list.html
@@ -8,20 +8,22 @@
       {% for book in books %}
         <div class="col-lg-4 text-center my-3">
           <h3 class="text-primary"> <i class="bi bi-hand-thumbs-up-fill"></i> {{book.likes.all.count}}</h3>
+          <div class="book-div">
           <img src="{{ book.image.url }}" alt="no photo" class="rounded img-fluid" />
           <h4 class="mt-3">{{ book.title }}</h4>
           <h5><a href="{% url 'author_books' book.author %}">{{ book.author }}</a></h5>
           <a
             href="{% url 'books_details' pk=book.pk slug=book.slug %}"
-            class="btn btn-outline-info mt-1 mb-2"
+            class="btn btn-primary mt-1 mb-2"
             >Learn More</a
           >
+          </div>
         </div>
       {% endfor %}
     </div>
   {% else %}
         <h1>No Liked Books yet !</h1>
-        <a href="{% url 'books_library' %}" class="btn btn-outline-info mt-5"
+        <a href="{% url 'books_library' %}" class="btn btn-primary mt-5"
             >Library</a>
       </div>
   {% endif %}
