--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container background-color-purple">
     <form class="input-group d-flex flex-row-reverse bd-highlight">
-      <button class="btn btn-outline-info mt-4 ms-2 btn-sm input-group-addon" type="submit">Sort</button>
+      <button class="btn btn-secondary mt-4 ms-2 btn-sm input-group-addon" type="submit">Sort</button>
       <!-- https://stackoverflow.com/questions/15050571/django-csrf-token-in-search-result-url -->
       <!-- REMOVING {% csrf_token %} check stackoverflow-->
       {{ form|crispy }}
