--- a/books/templates/books/comments.html
+++ b/books/templates/books/comments.html
@@ -6,7 +6,7 @@
       {% if comments %}
       <div class="scroll">
         {% for comment in comments %}
-        <div class="comment mb-4 text-justify border mt-2 p-2"> 
+        <div class="comment mb-4 text-justify border border-3 mt-2 p-2"> 
           <img src="{{ comment.posted_by.profile.image.url }}" alt="" class="rounded-circle comment-pic m-2">
           <h4 style="display: inline-block;">
             {% if user == comment.posted_by %}
@@ -34,7 +34,7 @@
           {{ form|crispy }}
         </fieldset>
         <div class="form-group">
-          <button class="float-end btn btn-outline-info mt-3" type="submit">Comment</button>
+          <button class="float-end btn btn-primary my-3 " type="submit">Comment</button>
         </div>
       </form>
     </div>
