primary button for update user page

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -24,7 +24,7 @@
                 {{ user_update_form|crispy }} {{ profile_update_form|crispy }}
               </fieldset>
               <div class="form-group">
-                <button class="btn btn-outline-info m-3" type="submit">Update Profile</button>
+                <button class="btn btn-primary m-3" type="submit">Update Profile</button>
                 <a 
                 class="btn btn-danger m-3"
                 href="{% url 'profile_delete' pk=user.id %}"
