--- a/books/templates/books/recommended_book_list.html
+++ b/books/templates/books/recommended_book_list.html
@@ -22,6 +22,7 @@
       {% endfor %}
     </div>
   {% else %}
+      <div class="text-center mt-5">
         <h1>No Liked Books yet !</h1>
         <a href="{% url 'books_library' %}" class="btn btn-primary mt-5"
             >Library</a>
