--- a/books/templates/books/comments.html
+++ b/books/templates/books/comments.html
@@ -18,8 +18,8 @@
           <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
           <span class="text-secondary">- {{ comment.date_posted|date:'d F, Y' }}</span>
           {% if user == comment.posted_by or user.is_superuser %}
-            <a class='btn-sm btn-primary me-2' href="{% url 'books_comment_update' pk=object.id slug=object.slug id=comment.id %}">Update</a>
-            <a class='btn-sm btn-danger' href="{% url 'books_comment_delete' pk=object.id slug=object.slug id=comment.id %}">Delete</a>
+            <a class='btn-sm btn-danger float-end mt-2' href="{% url 'books_comment_delete' pk=object.id slug=object.slug id=comment.id %}">Delete</a>
+            <a class='btn-sm btn-primary me-2 float-end mt-2' href="{% url 'books_comment_update' pk=object.id slug=object.slug id=comment.id %}">Update</a>
           {% endif %}
           <br>
           <p class="m-3">{{ comment.content }}</p>
