--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -33,17 +33,19 @@
           <div class="book-div">
             <img src="{{ book.image.url }}" alt="no photo" class="rounded img-fluid" />
            <div class="info-div">
+           <div>
             <h4 class="mt-3">{{ book.title }}</h4>
             {% if request.resolver_match.url_name == 'author_books' %}
               <h5>{{ book.author }}</h5>
             {% else %}
               <h5><a href="{% url 'author_books' book.author %}">{{ book.author }}</a></h5>
             {% endif%}
-            <a
+           </div>
+            <div><a
               href="{% url 'books_details' pk=book.pk slug=book.slug %}"
               class="btn btn-primary mt-1 mb-2"
               >Learn More</a
-            >
+            ></div>
            </div>
           </div>
         </div>
