--- a/books/templates/books/comments.html
+++ b/books/templates/books/comments.html
@@ -12,7 +12,7 @@
             {% if user == comment.posted_by %}
               <a href="{% url 'profile' %}">me</a>
             {% else %}
-              <a href="{% url 'profile_user' object.posted_by.id %}">{{ comment.posted_by }}</a>
+              <a href="{% url 'profile_user' comment.posted_by.id %}">{{ comment.posted_by }}</a>
             {% endif %}
           </h4>
           <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
