--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -21,7 +21,7 @@
                 Shared by
                 {% if user == object.posted_by%}
                   <!-- https://docs.djangoproject.com/en/4.0/ref/templates/builtins/#date -->
-                  <a href="{% url 'profile' %}">me</a> on {{ object.date_posted|date:'d F, Y' }}
+                  <a href="{% url 'profile' pk=user.pk %}">me</a> on {{ object.date_posted|date:'d F, Y' }}
                 {% else %}
                   <a href="{% url 'profile_user' object.posted_by.id %}">{{ object.posted_by }}</a> on {{ object.date_posted|date:'d F, Y' }}
                 {% endif %}
